# LMS

./: .env.example  .eslintignore  .eslintrc.js  .gitignore  AI_PROJECT_GUIDE.md  Cargo.toml  INTEGRATION_PLAN.md  JavaScript to Rust Migration Report.md  JavaScript to Rust Migration Tracking.md  LAST_ANALYSIS_RESULTS.md  LMS.code-workspace  LMS_Codebase_Cleanup_Plan.md  Makefile.toml  ORDO-QUIZ-STANDALONE.md  QUENTI-STANDALONE.md  README.md  SUMMARY_REPORT.md  advanced-api-analyzer.js  analysisUtils.js  analyze-integrated.bat  analyze-integrated.ps1  analyze-integrated.sh  analyze-project.bat  analyze.bat  analyzer-scripts-README.md  analyzer_config.toml  api_client_test_plan.md  app.js  build-minimal-ordo-quiz.bat  build-minimal-ordo-quiz.sh  build-ordo-quiz-standalone.bat  build-ordo-quiz-standalone.sh  build-ordo-quiz.bat  build-ordo-quiz.sh  build-quenti-standalone.bat  build-quenti-standalone.sh  build-wasm.bat  build-wasm.sh  build-with-options.bat  build.bat  (+98 more)
blockchain-wasm/: Cargo.toml
blockchain-wasm/src/: lib.rs
lms-integration/: Cargo.toml
lms-integration/src/: lib.rs  main.rs
lms-integration/src/api/: canvas_client.rs  discourse_client.rs
lms-integration/src/models/: sync_state.rs  sync_transaction.rs
lms-integration/tools/: batch_generate_models.py  model_batch_config.json
modules/analyzer/: Cargo.toml  README.md
modules/analyzer/src/: lib.rs
redb-test/: Cargo.toml
redb-test/src/: error.rs  main.rs  transaction_log.rs  transaction_manager.rs
src-tauri/: .env  Cargo.toml  build.rs  chain_config.toml  lms.db  main.rs  quiz-standalone.conf.json  tauri.conf.json
src-tauri/benches/: blockchain_bench.rs  educational_workload.rs
src-tauri/blockchain-wasm/: Cargo.toml
src-tauri/blockchain-wasm/src/: lib.rs
src-tauri/migrations/: 004_optimize_forum_indices.sql  20240406_add_indexes.sql  20240420_create_quiz_tables.sql  20240421_ordo_quiz_schema.sql  20250402000000_initial_schema.sql  20250402000001_modules_schema.sql  20250402000002_courses_schema.sql  20250403000000_forum_integration.sql  20250406_create_course_integration_settings.sql  20250406_create_sync_history.sql  20250407_create_forum_tables.sql  20250409_create_unified_schema.sql  20250501000000_create_unified_users_table.sql  20250502000000_create_unified_courses_table.sql  20250503000000_create_unified_groups_table.sql  20250504000000_create_unified_assignments_table.sql  20250505000000_create_unified_topics_table.sql  20250506000000_create_unified_submissions_table.sql  test_data.sql
src-tauri/src/: app_state.rs  assets.rs  auth.rs  commands.rs  config.json  database.rs  error.rs  haskell_runtime.rs  lib.rs  main-analytics.rs  main.rs  parser_integration.rs  profiler.rs  protocol_handler.rs
src-tauri/src/ai/: gemini_analyzer.rs  mod.rs
src-tauri/src/analyzers/: ai_knowledge_enhancer.rs  analysis_commands.rs  analysis_runner.rs  ast_analyzer.rs  dashboard_generator.rs  docs_updater.rs  js_migration_analyzer.rs  metrics_visualizer.rs  mod.rs  project_structure.rs  tech_debt_analyzer.rs  unified_analyzer.rs
src-tauri/src/api/: assignments.rs  attachments.rs  auth.rs  auth_test.rs  blockchain.rs  canvas.rs  canvas_client.rs  compression.rs  courses.rs  courses_test.rs  discourse.rs  discourse_client.rs  discussion.rs  discussion_routes.rs  discussions.rs  file_management.rs  forum.rs  forum_mapping.rs  forum_posts.rs  forum_topics.rs  integration.rs  integration_commands.rs  integration_settings.rs  integration_test.rs  middleware.rs  mod.rs  module_commands.rs  modules.rs  monitoring_commands.rs  notification_commands.rs  notifications.rs  quiz.rs  routes.rs  search.rs  submissions.rs  sync.rs  sync_history.rs  sync_routes.rs  sync_status.rs  users.rs
src-tauri/src/auth/: canvas_auth_service.rs  discourse_sso_service.rs  jwt.rs  jwt_handler.rs  jwt_service.rs  password.rs
src-tauri/src/benchmark/: mod.rs
src-tauri/src/blockchain/: anchoring.rs  batch_anchor.rs  batching.rs  cache.rs  config.rs  consensus.rs  core.rs  crdt_ops.rs  crypto.rs  domain.rs  error.rs  governor.rs  memory.rs  memory_opt.rs  metrics.rs  mod.rs  (+5 more)
src-tauri/tests/: auth_edge_cases_tests.rs  conflict_resolution_tests.rs  date_handling_test.rs  date_utils_tests.rs  discourse_client_tests.rs  discussion_tests.rs  forum_controllers_tests.rs  integration_settings_tests.rs  integration_tests.rs  module_api_tests.rs  modules_api_test.rs  notification_tests.rs  sync_queue_tests.rs  unified_analyzer_integration_test.rs  unified_analyzer_test.rs  unified_models_integration_tests.rs  user_tests.rs  version_vector_tests.rs
tools/: Cargo.toml  Untitled-1.ps1  ai_coder_onboarding.ps1  audit_codebase.py  batch_generate_models.py  business_logic_analyzer.rs  canvas_analyzer_template.py  cleanup_js.py  cleanup_migrated_js.py  compare_models.py  compare_structure.py  component_status.md  create_analyzer_utils.py  create_doc_structure.py  extract_model_docs.py  find_canvas_equivalent.py  find_discourse_equivalent.py  find_model_file.py  generate_dashboard.py  generate_db_schema.bat  generate_db_schema.rs  generate_rust_model.py  index_project.rs  integrate_analyzers.py  model_batch_config.json  organize_docs.py  project_index.md  route_analyzer.rs  setup_documentation.py  update_ai_documentation.ps1  update_audit.rs
tools/migration-test/: Cargo.toml  migration_tracker.json
tools/project-analyzer/: Cargo.toml  check_remaining_js.py  final_checklist.py  generate_report.py  js_cleanup.py  update_tracking.py  verify_coverage.py
tools/tests/: business_logic_analyzer_test.rs  route_analyzer_test.rs
tools/unified-analyzer/: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cleanup_project_analyzer.ps1  config.toml  migrate_analyzers.ps1  migration_status.md  migration_status_updated.md  ofelia.ini  redundancy-analyze.bat  redundancy_analyzer_config.toml  remove_analyzers.ps1  run_analyzer.bat  run_analyzer.ps1  run_project_analyzer.bat  run_test.bat  run_tests.bat  run_tests.ps1  run_unified_analyzer.ps1  simple_cleanup.bat  simple_project_analyzer.bat  test_haskell_analyzer.rs  unified-analyze.bat  unified_output.json
(+1898 files in other folders)
