[package]
name = "lms-root"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0" # Latest stable as of April 2025

[dependencies]
serde_json = "1.0"
leptos = { version = "0.7.8", features = ["serde"] }
leptos_axum = { version = "0.7.8", optional = true }
leptos_wasi = { version = "0.7.8", optional = true }
reqwest = { version = "0.12", features = ["blocking", "json", "default"] }
axum = { version = "0.7", optional = true }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "postgres", "macros"] }
tokio = { version = "1.28", features = ["full"], optional = true }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.102"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "Window", "Document", "Element", "DomRect", "CssStyleDeclaration"] }
base64 = "0.22.1"
oauth2 = "5.0.0"
url = "2.3"
zip = "2.6.1"
tracing = "0.1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[workspace]
members = [
    "tools",
    "blockchain-wasm",
    "modules/analyzer",
    "src/tools/migration_utility",
    "redb-test-project"
    # "src/services/migration" - Removed as this path doesn't exist
    # "src-tauri" - Removed as it has its own workspace
]
[workspace.package]
edition = "2021"
authors = ["LMS Team"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hyper = { version = "1.6.0", features = ["full"] }

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = [
    "leptos/ssr",
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum"
]
wasi = ["leptos/hydrate", "dep:leptos_wasi"]

[package.metadata.wasm]
wasm-bindgen-cli = "0.2"

[package.metadata.leptos]
style-file = "style/output.css"
assets-dir = "assets"
site-root = "target/site"
site-pkg-dir = "pkg"

[lib]
crate-type = ["cdylib"]

[profile.dev]
# Your dev profile settings

# Binary moved to modules/analyzer
# [[bin]]
# name = "project-analyzer"
# path = "src/bin/project_analyzer.rs"

[[bin]]
name = "redb-transaction-example"
path = "src-tauri/src/bin/redb_transaction_example.rs"

# Removed patch as it was causing issues
