[package]
name = "blockchain-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.89"
ed25519-dalek = { version = "2.0", default-features = false, features = ["rand_core"] }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"