[package]
name = "redb-test"
version = "0.1.0"
edition = "2021"

[dependencies]
redb = "1.3.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.10.1"

[[bin]]
name = "redb-test"
path = "src/main.rs"
