[workspace]

[package]
name = "lms-tauri"
version = "0.1.0"
description = "Learning Management System with integrated forum"
authors = ["Tim Vail"]
edition = "2021"  # or "2024" if your Cargo version supports it

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lms_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
# Core blockchain dependencies with pinned versions
redb = { version = "2.4.0", default-features = false, features = ["logging"] }
libp2p = { version = "0.53.2", default-features = false, features = ["tcp", "noise", "gossipsub"] }
ed25519-dalek = "2.1.1"
automerge = { version = "0.6.1", default-features = false }

# Zero-copy serialization
postcard = "1.0"
bincode = "2.0.1"

# Async runtime with minimal features
tokio = { version = "1.44.2", features = ["full"], default-features = false }

# Database and serialization
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite", "chrono", "macros"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9.1"
slugify = "0.1.0"
thiserror = "2.0.12"

# Memory optimization
arrayvec = "0.7.7"
parking_lot = "0.12.4"
once_cell = "1.21.4"

# Diff-based anchoring
diff-struct = "0.5"
blake3 = "1.8.2"

# Telemetry
tracing = "0.1.42"
tracing-subscriber = "0.3.20"
hdrhistogram = "7.6.0"

# Configuration
dotenvy = "0.16.2"

# Other utilities
hex = "0.4.3"
uuid = { version = "1.6.0", features = ["v4", "serde"] }
moka = { version = "0.12", features = ["future"] }
meilisearch-sdk = "0.28.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
ctrlc = "3.4.4"
bcrypt = "0.15.0"
regex = "1.10.10"
jsonwebtoken = "9.4.0"

# Added missing dependencies
axum = { version = "0.7", features = ["tokio"] }
tauri = { version = "1.5" }
argon2 = "0.5.3"
anyhow = "1.0"
url = "2.5.0"

# Analyzer dependencies
# chrono = { version = "0.4", features = ["serde"] } # Removed as it's already defined elsewhere
# regex = "1.10"
walkdir = "2.6.1"
futures-util = "0.3"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
# tracing = "0.1"
# tracing-subscriber = "0.3"
syn = { version = "2.0", features = ["full", "parsing"] }
proc-macro2 = "1.0"
quote = "1.0"
# reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
mockall = "0.14.0"
test-case = "3.2"

[features]
default = []
# Remove criterion from bench feature since it can't be optional
bench = []
type-sizes = []
blockchain-full = ["libp2p/identify", "libp2p/kad"]
standalone-quiz = []

[[bench]]
name = "blockchain_bench"
harness = false
# This line makes cargo only build the benchmark when the bench feature is enabled
required-features = ["bench"]

[[bin]]
name = "test-redb-transactions"
path = "src/bin/test_redb_transactions.rs"

[[bin]]
name = "simple-redb-test"
path = "src/bin/simple_redb_test.rs"

[[bin]]
name = "minimal-redb-test"
path = "src/bin/minimal_redb_test.rs"

[[bin]]
name = "redb-transaction-test"
path = "src/bin/redb_transaction_test.rs"

[[bin]]
name = "quiz-standalone"
path = "src/bin/quiz-standalone.rs"

# Specify a specific version of base64 that doesn't have the issue
[dependencies.base64]
version = "0.22.1"
features = []
default-features = true
