# Removed workspace declaration as it's already included in the root workspace

[package]
name = "lms-tools"
version = "0.1.0"
edition = "2021"
description = "Development tools for the LMS project"

# These tools are completely separate from the main app
[dependencies]
chrono = "0.4"
sha2 = "0.10"
walkdir = "2.3.1"
anyhow = "1.0"
