[package]
name = "migration-test"
version = "0.1.0"
edition = "2021"

# Removed workspace declaration to avoid conflicts with root workspace

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.5"
rand = "0.8"
