[package]
name = "project-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
toml = "0.8" # Added for config file parsing
syn = { version = "2.0", features = ["full", "visit", "extra-traits"] } # Added for Rust code parsing