[package]
name = "unified-analyzer"
version = "0.1.0"
edition = "2021"
description = "Unified analyzer for the LMS project"

[workspace]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
log = "0.4"
tokio = { version = "1.28", features = ["full"] } # Existing dependency
futures-util = "0.3" # Existing dependency
anyhow = "1.0" # Existing dependency
regex = "1.8" # Existing dependency
tempfile = "3.5" # Existing dependency
toml = "0.7" # Existing dependency
thiserror = "1.0" # Existing dependency
clap = { version = "4.3", features = ["derive"] } # Existing dependency
walkdir = "2.4.0"
# lazy_static already defined above
env_logger = "0.10.0"
rayon = "1.8.0"
once_cell = "1.18.0"

[[bin]]
name = "test_haskell_analyzer"
path = "src/bin/test_haskell_analyzer.rs"

[[bin]]
name = "analyze_ruby"
path = "src/bin/analyze_ruby.rs"
